--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/element_spacing"
+    android:layout_marginTop="@dimen/spacing_user_list"
+    android:layout_marginEnd="@dimen/element_spacing"
+    android:layout_marginBottom="@dimen/spacing_user_list"
     android:checkable="true"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginBottom="@dimen/spacing_user_list"
-    android:layout_marginTop="@dimen/spacing_user_list"
-    android:layout_marginStart="@dimen/element_spacing"
-    android:layout_marginEnd="@dimen/element_spacing"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
@@ -27,6 +27,7 @@
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
             android:layout_marginBottom="@dimen/common_spacing"
+            android:background="@drawable/not_avatar_circle_background"
             android:contentDescription="@string/avatar_image"
             android:src="@drawable/img_test_avatar"
             app:layout_constraintStart_toStartOf="parent"
