--- a/app/src/main/res/layout/avatars_multiple.xml
+++ b/app/src/main/res/layout/avatars_multiple.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/avatarGroup"
-        tools:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,7 +14,10 @@
             android:id="@+id/avatar1"
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
+            android:background="@drawable/not_avatar_circle_background"
             android:importantForAccessibility="no"
+
+            android:visibility="invisible"
             tools:src="@drawable/img_test_avatar"
             tools:visibility="visible" />
 
@@ -24,7 +26,10 @@
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
             android:layout_marginStart="-10dp"
+            android:background="@drawable/not_avatar_circle_background"
             android:importantForAccessibility="no"
+
+            android:visibility="invisible"
             tools:src="@drawable/test_avatar2"
             tools:visibility="visible" />
 
@@ -33,18 +38,22 @@
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
             android:layout_marginStart="-10dp"
+            android:background="@drawable/not_avatar_circle_background"
             android:importantForAccessibility="no"
-            android:visibility="visible"
-            tools:src="@drawable/test_avatar2"
-            />
+            android:visibility="invisible"
+            tools:src="@drawable/ic_error_outline_100dp"
+            tools:visibility="visible" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/avatar4"
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
             android:layout_marginStart="-10dp"
+            android:background="@drawable/not_avatar_circle_background"
             android:importantForAccessibility="no"
+            android:visibility="visible"
             tools:src="@drawable/img_test_avatar"
+
             tools:visibility="visible" />
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -52,8 +61,10 @@
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
             android:layout_marginStart="-10dp"
+            android:background="@drawable/not_avatar_circle_background"
             android:importantForAccessibility="no"
-            tools:src="@drawable/img_test_avatar"
+            android:visibility="visible"
+            tools:src="@drawable/ic_error_outline_100dp"
             tools:visibility="visible" />
 
         <ImageButton
@@ -61,16 +72,16 @@
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
             android:layout_marginStart="-10dp"
-            android:background="@drawable/background_button_show_more"
+            android:background="@drawable/not_avatar_circle_background"
             android:contentDescription="@string/avatar_load_button"
-            android:visibility="invisible"
-            tools:visibility="visible"
             android:src="@drawable/ic_add_24dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@id/LoginETL"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:visibility="visible" />
 
     </LinearLayout>
 
