--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -40,6 +40,7 @@
                 android:layout_marginStart="@dimen/element_spacing"
                 android:layout_marginTop="@dimen/element_spacing"
                 android:layout_marginBottom="@dimen/common_spacing"
+                android:background="@drawable/not_avatar_circle_background"
                 android:contentDescription="@string/desc_avatar_image"
                 app:layout_constraintBottom_toBottomOf="@id/barrier_top"
                 app:layout_constraintStart_toStartOf="parent"
@@ -89,21 +90,25 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/barrier_top">
+
                 <ImageView
                     android:id="@+id/imageAttachment"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/max_size_attachment"
                     android:adjustViewBounds="true"
+                    android:background="@color/primary"
                     android:contentDescription="@string/desc_attachment_image"
-                    android:padding="@dimen/element_spacing"
+                    android:scaleType="centerCrop"
                     android:visibility="gone"
-                    tools:src="@drawable/ic_people_outline_24dp"
+                    tools:src="@drawable/img_test_avatar"
                     tools:visibility="visible" />
+
                 <include
                     android:id="@+id/audio_attachment"
                     layout="@layout/audio_play"
                     android:visibility="gone"
                     tools:visibility="visible" />
+
                 <include
                     android:id="@+id/video_attachment"
                     layout="@layout/video_play" />
@@ -243,7 +248,6 @@
                     android:checkable="true"
                     app:icon="@drawable/ic_people_outline_24dp"
                     tools:text="10" />
-
                 <include
                     android:id="@+id/list_avatars_participant"
                     layout="@layout/avatars_multiple" />
