--- a/app/src/main/res/layout/event_new_fragment.xml
+++ b/app/src/main/res/layout/event_new_fragment.xml
@@ -40,17 +40,23 @@
             android:orientation="vertical"
             android:padding="@dimen/element_spacing">
 
-            <EditText
-                android:id="@+id/ContentEventET"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
+                android:hint="@string/hint_text"
                 android:inputType="textMultiLine"
-                android:padding="@dimen/common_spacing"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@tools:sample/lorem[20]" />
+                app:boxStrokeColor="@color/primary"
+                app:boxStrokeWidth="1dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ContentEventET"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="@tools:sample/lorem[20]" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -63,9 +69,8 @@
                     android:id="@+id/Link"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/element_spacing"
                     android:layout_marginTop="@dimen/element_spacing"
-                    />
+                    android:layout_marginBottom="@dimen/element_spacing" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
