--- a/app/src/main/res/layout/job_new_fragment.xml
+++ b/app/src/main/res/layout/job_new_fragment.xml
@@ -73,8 +73,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/LinkET"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:layout_height="wrap_content" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
