--- a/app/src/main/res/layout/post_new_fragment.xml
+++ b/app/src/main/res/layout/post_new_fragment.xml
@@ -40,16 +40,23 @@
             android:orientation="vertical"
             android:padding="@dimen/element_spacing">
 
-            <EditText
-                android:id="@+id/ContentPostET"
-                android:hint="@string/hint_text"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
+                android:hint="@string/hint_text"
                 android:inputType="textMultiLine"
-                android:padding="@dimen/common_spacing"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@tools:sample/lorem[20]" />
+                app:boxStrokeColor="@color/primary"
+                app:boxStrokeWidth="1dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ContentPostET"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="@tools:sample/lorem[20]" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
