--- a/app/src/main/res/layout/choose_users_fragment.xml
+++ b/app/src/main/res/layout/choose_users_fragment.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/chooseUsersFragment"
+    tools:context="ui.post.ChooseUsersFragment"
+    >
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/ChooseUserABL"
@@ -31,6 +34,7 @@
             android:id="@+id/ListUserChoose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/user_card_choose" />
     </androidx.core.widget.NestedScrollView>
 
