--- a/app/src/main/res/layout/user_card_choose.xml
+++ b/app/src/main/res/layout/user_card_choose.xml
@@ -26,9 +26,8 @@
             android:contentDescription="@string/avatar_image"
             android:src="@drawable/img_test_avatar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
 
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/AuthorTV"
@@ -65,6 +64,7 @@
             style="@style/Widget.Material3.CompoundButton.CheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
