--- a/app/src/main/res/layout/choose_users_fragment.xml
+++ b/app/src/main/res/layout/choose_users_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/chooseUsersFragment"
-    tools:context="ui.post.ChooseUsersFragment"
+    tools:context="ui.post.ChooseMentionedFragment"
     >
 
     <com.google.android.material.appbar.AppBarLayout
