--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -199,17 +199,22 @@
             app:layout_constraintTop_toBottomOf="@id/barrier_middle"
             tools:text="10" />
 
-        <ImageButton
+
+
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/UsersIB"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+            style="@style/Widget.AppTheme.ParticipantsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/common_spacing"
             android:contentDescription="@string/desc_icon_people"
-            android:src="@drawable/ic_people_outline_24dp"
+            android:checkable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
+            app:layout_constraintTop_toBottomOf="@id/barrier_middle"
+            tools:text="10" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
