--- a/app/src/main/res/layout/post_details_fragment_.xml
+++ b/app/src/main/res/layout/post_details_fragment_.xml
@@ -37,11 +37,11 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/AvatarIV"
                 android:layout_width="@dimen/posts_avatar_size"
-                android:background="@drawable/not_avatar_circle_background"
                 android:layout_height="@dimen/posts_avatar_size"
                 android:layout_marginStart="@dimen/element_spacing"
                 android:layout_marginTop="@dimen/element_spacing"
                 android:layout_marginBottom="@dimen/common_spacing"
+                android:background="@drawable/not_avatar_circle_background"
                 android:contentDescription="@string/desc_avatar_image"
                 app:layout_constraintBottom_toBottomOf="@id/barrier_top"
                 app:layout_constraintStart_toStartOf="parent"
@@ -91,22 +91,25 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/barrier_top">
+
                 <ImageView
                     android:id="@+id/imageAttachment"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/max_size_attachment"
                     android:adjustViewBounds="true"
                     android:background="@color/primary"
-                    android:scaleType="centerCrop"
                     android:contentDescription="@string/desc_attachment_image"
+                    android:scaleType="centerCrop"
                     android:visibility="gone"
                     tools:src="@drawable/test_avatar2"
                     tools:visibility="visible" />
+
                 <include
                     android:id="@+id/audio_attachment"
                     layout="@layout/audio_play"
                     android:visibility="gone"
                     tools:visibility="visible" />
+
                 <include
                     android:id="@+id/video_attachment"
                     layout="@layout/video_play" />
@@ -195,7 +198,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/element_spacing"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@id/GeoPostIV"
+                app:layout_constraintBottom_toTopOf="@id/GeoPostMW"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/TitleMentionedTV">
@@ -214,20 +217,18 @@
                     layout="@layout/avatars_multiple" />
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/GeoPostIV"
+            <com.yandex.mapkit.mapview.MapView
+                android:id="@+id/GeoPostMW"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/element_spacing"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/desc_screen_geo_location"
+                android:layout_height="@dimen/max_size_attachment"
+                android:layout_marginTop="@dimen/common_spacing"
+                android:clickable="false"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@id/TitleLinkTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/GroupMentionedLL"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:layout_height="200dp"
-                tools:src="@drawable/ic_location_pin_24dp" />
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/TitleLinkTV"
@@ -240,7 +241,7 @@
                 app:layout_constraintBottom_toTopOf="@id/LinkPostTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/GeoPostIV" />
+                app:layout_constraintTop_toBottomOf="@id/GeoPostMW" />
 
 
             <TextView
